Remove pharma brand names + fix dead links in product pages

--- a/products/5-amino-1mq.html
+++ b/products/5-amino-1mq.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy 5-Amino-1MQ | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="5-Amino-1MQ research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>5-Amino-1MQ 5mg | ≥98% Pure | NNMT Enzyme Inhibitor | PRC Peptides</title>
+<meta name="description" content="5-Amino-1MQ 5mg NNMT inhibitor for NAD+ research. ≥98% purity, third-party tested, oral small molecule. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "5-Amino-1MQ",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A selective small molecule inhibitor of nicotinamide N-methyltransferase—increasing cellular NAD+ availability through enzymatic blockade of the methylation pathway.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$25</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A selective small molecule inhibitor of nicotinamide N-methyltransferase—increasing cellular NAD+ availability through enzymatic blockade of the methylation pathway.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Oral Capsule</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,17 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%205-Amino-1MQ" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is 5-Amino-1MQ?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
+<p>5-Amino-1-methylquinolinium targets a metabolic bottleneck: nicotinamide N-methyltransferase (NNMT), an enzyme that consumes NAD+ precursors by methylating nicotinamide for excretion. By inhibiting NNMT, 5-Amino-1MQ preserves intracellular nicotinamide, allowing its recycling back to NAD+ through the salvage pathway. This mechanism provides an alternative approach to NAD+ augmentation—rather than supplying more precursor, block the pathway that depletes it.</p><p>NNMT overexpression correlates with metabolic dysfunction and adiposity in preclinical models, suggesting this enzyme represents a metabolic control point. Research with 5-Amino-1MQ explores NNMT's role in NAD+ homeostasis, methylation reactions, energy metabolism, and the enzyme's potential as a metabolic regulatory target. Note: This is an oral small molecule, not an injectable peptide.</p>
 
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store at room temperature (15-30°C) in sealed container protected from moisture. This small molecule exhibits excellent stability. For research use, dissolve in appropriate vehicle according to experimental protocol.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
