--- a/products/aod-9604.html
+++ b/products/aod-9604.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy AOD-9604 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="AOD-9604 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>AOD-9604 2mg | ≥98% Pure | Lipolytic HGH Fragment | PRC Peptides</title>
+<meta name="description" content="AOD-9604 2mg modified GH fragment for lipolysis research. ≥98% purity, third-party tested, fat mobilization without GH receptor activation. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "AOD-9604",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A strategically modified fragment of growth hormone's C-terminus—retaining lipolytic activity while eliminating GH receptor activation and IGF-1 elevation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$20</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A strategically modified fragment of growth hormone's C-terminus—retaining lipolytic activity while eliminating GH receptor activation and IGF-1 elevation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>2mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20AOD-9604" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is AOD-9604?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>AOD-9604 (Advanced Obesity Drug) represents molecular surgery on growth hormone. Australian researchers at Monash University identified the 176-191 C-terminal region as responsible for GH's lipolytic effects, then added stabilizing modifications to create a fragment that stimulates lipolysis without growth hormone receptor binding. The result: a peptide that mimics GH's fat-mobilizing properties while completely avoiding effects on growth, glucose metabolism, or IGF-1—a clean separation impossible with full-length GH.</p><p>This selective action makes AOD-9604 invaluable for dissecting GH's metabolic effects. Researchers can investigate lipolytic signaling mechanisms, study adipocyte beta-oxidation, and explore growth hormone's metabolic functions without the confounding variables of receptor-mediated GH actions. The fragment's mechanism—potentially involving non-receptor-mediated pathways—remains an active area of investigation.</p>
+<h2>Research Applications</h2>
+<ul><li>Lipolysis mechanism research</li><li>GH fragment biology</li><li>Lipid metabolism studies</li><li>Adipocyte signaling independent of GH receptor</li><li>Selective metabolic pathway activation</li><li>Non-receptor GH effects</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The modifications provide enhanced stability compared to unmodified HGH fragments.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
