--- a/products/botulinum-200u.html
+++ b/products/botulinum-200u.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Botulinum 200u | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Botulinum 200u research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Botulinum Toxin Type A 200u | Pharmaceutical Grade | Synaptic Research Tool | PRC Peptides</title>
+<meta name="description" content="Botulinum Toxin 200u for neurotransmitter research. Pharmaceutical grade, SNAP-25 cleavage, synaptic biology. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Botulinum 200u",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The most potent biological toxin known—a 150 kDa metalloprotease that cleaves SNAP-25 with absolute specificity, making it essential for studying synaptic vesicle fusion and neurotransmitter release.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$170</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The most potent biological toxin known—a 150 kDa metalloprotease that cleaves SNAP-25 with absolute specificity, making it essential for studying synaptic vesicle fusion and neurotransmitter release.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>200u</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Botulinum%20200u" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Botulinum 200u?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Botulinum neurotoxin type A represents the gold standard for studying exocytosis. This large protein complex, produced by Clostridium botulinum, consists of a heavy chain (responsible for binding and internalization) and a light chain (the zinc-dependent endopeptidase that cleaves SNAP-25). By specifically cleaving SNAP-25—a protein essential for SNARE complex formation—BoNT/A prevents synaptic vesicles from fusing with the presynaptic membrane, completely blocking neurotransmitter release.</p><p>This exquisite molecular specificity makes botulinum toxin invaluable beyond its clinical applications. Researchers studying SNARE protein biology, investigating synaptic vesicle fusion mechanisms, exploring neuromuscular junction physiology, or dissecting the molecular machinery of exocytosis rely on BoNT/A's specific, irreversible SNAP-25 cleavage. The toxin serves as a molecular scalpel that precisely disrupts a single step in neurotransmitter release.</p>
+<h2>Research Applications</h2>
+<ul><li>SNARE protein biology</li><li>Synaptic vesicle fusion mechanisms</li><li>Neuromuscular junction research</li><li>Acetylcholine release studies</li><li>Exocytosis research</li><li>Presynaptic signaling</li><li>Metalloprotease mechanism studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution, use immediately or store at 2-8°C for a maximum of 4 hours—this protein loses activity rapidly in solution. Handle with extreme care following institutional biosafety protocols.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
