--- a/products/cjc-1295.html
+++ b/products/cjc-1295.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy CJC-1295 (no DAC) | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="CJC-1295 (no DAC) research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>CJC-1295 no DAC 5mg | ≥98% Pure | Modified GRF(1-29) | PRC Peptides</title>
+<meta name="description" content="CJC-1295 no DAC 5mg GHRH analogue for pulsatile GH research. ≥98% purity, third-party tested, enhanced stability without DAC. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "CJC-1295 (no DAC)",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A strategically modified GHRH analogue with enhanced proteolytic resistance—offering the benefits of extended stability without the prolonged binding of DAC-conjugated versions.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$42</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A strategically modified GHRH analogue with enhanced proteolytic resistance—offering the benefits of extended stability without the prolonged binding of DAC-conjugated versions.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20CJC-1295%20(no%20DAC)" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is CJC-1295 (no DAC)?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>CJC-1295 without Drug Affinity Complex (commonly called Modified GRF 1-29 or Mod GRF) represents refined GHRH analogue design. Through targeted amino acid substitutions at positions vulnerable to enzymatic cleavage, researchers created a peptide significantly more stable than natural GHRH yet without the week-long half-life of DAC-conjugated CJC-1295. This intermediate stability profile proves ideal for studying pulsatile GH release—the natural physiological pattern that continuous GHRH exposure would obscure.</p><p>The compound binds GHRH receptors with high affinity while resisting degradation by plasma peptidases, enabling multi-hour experimental windows without the supraphysiological, sustained activation that DAC conjugation creates. Researchers investigating natural GH pulse architecture, GHRH receptor desensitization, or physiological GH secretion patterns prefer this version for its balance of stability and pulsatility.</p>
+<h2>Research Applications</h2>
+<ul><li>GHRH analogue pharmacology</li><li>Pulsatile GH release patterns</li><li>GHRH receptor binding kinetics</li><li>Peptide stability mechanisms</li><li>Growth hormone secretion dynamics</li><li>Somatotroph physiology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from light and moisture. Reconstitute with bacteriostatic water; stable at 2-8°C for 30 days. The structural modifications provide significant proteolytic resistance.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
