--- a/products/cjc-ipamorelin.html
+++ b/products/cjc-ipamorelin.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy CJC-1295/Ipamorelin | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="CJC-1295/Ipamorelin research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>CJC-1295/Ipamorelin 5mg/5mg | ≥98% Pure | Dual GH Pathway Blend | PRC Peptides</title>
+<meta name="description" content="CJC-1295/Ipamorelin combination for synergistic GH research. ≥98% purity, third-party tested, dual GHRH/ghrelin pathway. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "CJC-1295/Ipamorelin",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A precision-balanced combination targeting both GHRH and ghrelin pathways—enabling investigation of synergistic GH secretion mechanisms that single agents cannot reveal.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$42</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A precision-balanced combination targeting both GHRH and ghrelin pathways—enabling investigation of synergistic GH secretion mechanisms that single agents cannot reveal.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg/5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20CJC-1295%2FIpamorelin" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is CJC-1295/Ipamorelin?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Growth hormone release is governed by two parallel pathways: GHRH signaling through pituitary GHRH receptors, and ghrelin acting via GHS-R1a receptors. This combination recognizes that dual-pathway activation produces supra-additive effects—the GH pulse amplitude from combined GHRH/ghrelin agonism exceeds the sum of individual stimulation. The mechanism involves distinct intracellular signaling cascades that converge on GH granule release, with ghrelin potentially amplifying GHRH's effects through calcium mobilization.</p><p>Researchers studying GH secretion physiology, investigating secretagogue synergy, or modeling maximal endogenous GH release find this pre-optimized ratio invaluable. The combination eliminates dosing variables, ensuring consistent GHRH:ghrelin pathway stimulation across experiments—a critical factor in reproducible GH research.</p>
+<h2>Research Applications</h2>
+<ul><li>Dual-pathway GH secretagogue studies</li><li>GHRH/ghrelin synergy mechanisms</li><li>Amplified GH pulse research</li><li>Combined secretagogue pharmacodynamics</li><li>Maximal endogenous GH release models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C in sealed dual-chamber vial. Reconstitute both components simultaneously; maintain at 2-8°C and use within 30 days. Both peptides exhibit excellent co-stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
