--- a/products/hgh-fragment-191.html
+++ b/products/hgh-fragment-191.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy HGH Fragment 191 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="HGH Fragment 191 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>HGH 191 1500iu | ≥98% Pure | Recombinant Human Somatotropin | PRC Peptides</title>
+<meta name="description" content="HGH 191 recombinant human growth hormone for receptor research. ≥98% purity, third-party tested, bioidentical 191-AA somatotropin. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "HGH Fragment 191",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "Bioidentical 191-amino acid human growth hormone produced via recombinant DNA technology—the reference standard for GH receptor research.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$28</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">Bioidentical 191-amino acid human growth hormone produced via recombinant DNA technology—the reference standard for GH receptor research.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20HGH%20Fragment%20191" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is HGH Fragment 191?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>This represents human somatotropin in its native form: 191 amino acids in the precise sequence and tertiary structure found in pituitary-derived growth hormone. Produced through recombinant DNA technology in E. coli expression systems, this rHGH is structurally indistinguishable from endogenous GH, making it the unambiguous choice for studying growth hormone receptor binding, GH-mediated signal transduction, and the direct effects of somatotropin on target tissues.</p><p>Where secretagogues provide indirect GH elevation through endogenous release, direct GH administration enables precise dose-response studies, receptor saturation experiments, and investigation of GH signaling independent of pituitary function. With over four decades of research characterizing GH's effects on IGF-1 production, lipolysis, protein synthesis, and tissue remodeling, this molecule remains central to endocrine and metabolic research.</p>
+<h2>Research Applications</h2>
+<ul><li>GH receptor binding and signaling</li><li>IGF-1 pathway research</li><li>Somatotropin receptor pharmacology</li><li>Anabolic signaling mechanisms</li><li>Direct GH effects vs. secretagogue comparison</li><li>Protein synthesis research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from light. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 14 days—shorter than peptide secretagogues due to protein aggregation susceptibility. Avoid agitation; gently swirl to dissolve.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
