--- a/products/laennec.html
+++ b/products/laennec.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Laennec | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Laennec research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Laennec Ampules | Pharmaceutical Grade | Human Placental Extract | PRC Peptides</title>
+<meta name="description" content="Laennec pharmaceutical-grade placental extract for regenerative research. Multi-growth factor complex, Japanese manufacture. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Laennec",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A pharmaceutical-grade human placental hydrolysate containing over 50 identified growth factors—the most complex multi-factor biological preparation available for regenerative research.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,9 +68,9 @@
 <div class="product-price">$425</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A pharmaceutical-grade human placental hydrolysate containing over 50 identified growth factors—the most complex multi-factor biological preparation available for regenerative research.</div>
 <div class="specs-table"><table>
-<tr><td>Form</td><td>Lyophilized Powder</td></tr>
+<tr><td>Form</td><td>Ampules</td></tr>
 <tr><td>Quantity</td><td>10 ampules</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
 <tr><td>CAS Number</td><td>Placental extract</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Laennec" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Laennec?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Laennec represents the biological complexity that single-molecule research cannot capture. This pharmaceutical-grade extract, derived from healthy human placenta and manufactured under strict Japanese pharmaceutical standards, contains a remarkably diverse array of bioactive molecules: multiple growth factor families (FGF, EGF, VEGF, HGF), cytokines, amino acids, vitamins, and minerals that collectively drive tissue regeneration. The placenta—nature's most rapidly growing temporary organ—concentrates factors that promote cell proliferation, angiogenesis, and tissue remodeling.</p><p>Unlike recombinant single-factor preparations, Laennec provides the factor combinations and ratios that occur naturally during development and healing. Researchers studying complex tissue regeneration, investigating growth factor synergies, or modeling multi-factor biological environments find this extract invaluable for capturing biological complexity that simplified systems miss.</p>
+<h2>Research Applications</h2>
+<ul><li>Multi-growth factor signaling</li><li>Tissue regeneration models</li><li>Cytokine interaction studies</li><li>Complex biological system research</li><li>Angiogenesis with multiple factors</li><li>Cellular metabolism in growth factor-rich environments</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store refrigerated at 2-8°C in sealed ampules. Do not freeze—freezing damages the biological factor profile. Protect from direct light. Use immediately upon opening; no preservatives present. Stable 24 months unopened under proper refrigeration.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
