--- a/products/lipo-c-max.html
+++ b/products/lipo-c-max.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Lipo-C MAX Blend | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Lipo-C MAX Blend research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Lipo-C MAX Blend | ≥98% Pure | MIC Lipotropic Complex | PRC Peptides</title>
+<meta name="description" content="Lipo-C MAX lipotropic blend for metabolic research. ≥98% purity per component, third-party tested, MIC+L-Carnitine. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Lipo-C MAX Blend",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A precision-formulated lipotropic blend combining methionine, inositol, choline, and L-carnitine—the foundational "MIC" factors that support hepatic lipid metabolism research.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$42</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A precision-formulated lipotropic blend combining methionine, inositol, choline, and L-carnitine—the foundational "MIC" factors that support hepatic lipid metabolism research.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10ml</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Lipo-C%20MAX%20Blend" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Lipo-C MAX Blend?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>The Lipo-C MAX formulation recognizes that lipid metabolism requires multiple cofactors working in concert. Methionine provides the methyl groups essential for phosphatidylcholine synthesis and methylation reactions. Inositol participates in lipid messenger signaling and cell membrane formation. Choline serves as a precursor for phosphatidylcholine and prevents hepatic lipid accumulation. L-carnitine shuttles long-chain fatty acids into mitochondria for beta-oxidation. Together, these lipotropic factors create the biochemical environment for efficient hepatic lipid processing.</p><p>Researchers studying hepatic steatosis models, investigating lipotropic factor deficiencies, or exploring the interplay between methylation and lipid metabolism find this standardized combination valuable for consistent multi-factor supplementation. The blend enables study of synergistic lipotropic mechanisms that isolated factor research cannot reveal.</p>
+<h2>Research Applications</h2>
+<ul><li>Lipotropic factor research</li><li>Hepatic lipid metabolism</li><li>Methyl donor biology</li><li>Choline metabolism</li><li>Mitochondrial fatty acid transport</li><li>One-carbon metabolism</li><li>Phospholipid synthesis studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution, maintain at 2-8°C and use within 30 days. All components remain stable when combined in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
