--- a/products/lipo-c-plus.html
+++ b/products/lipo-c-plus.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Lipo-C Plus | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Lipo-C Plus research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Lipo-C Plus Blend | ≥98% Pure | Enhanced Metabolic Complex | PRC Peptides</title>
+<meta name="description" content="Lipo-C Plus enhanced lipotropic blend for metabolic research. ≥98% purity per component, third-party tested, MIC+amino acids. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Lipo-C Plus",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "An advanced metabolic research formulation extending beyond basic lipotropic factors—incorporating amino acids and cofactors for comprehensive cellular energy metabolism studies.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$42</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">An advanced metabolic research formulation extending beyond basic lipotropic factors—incorporating amino acids and cofactors for comprehensive cellular energy metabolism studies.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10ml</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Lipo-C%20Plus" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Lipo-C Plus?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Building upon the foundation of methionine, inositol, choline, and L-carnitine, the Lipo-C Plus formulation adds complementary factors that participate in energy production, mitochondrial function, and metabolic performance. This enhanced blend recognizes that optimal cellular metabolism requires not just lipid processing factors, but also amino acids for protein synthesis, cofactors for enzymatic reactions, and compounds that support mitochondrial efficiency.</p><p>The formulation enables researchers to investigate integrated metabolic responses—how lipotropic factors, amino acids, and energy cofactors interact to influence overall cellular bioenergetics. Studies of performance metabolism, research into multi-pathway metabolic optimization, and investigation of synergistic cofactor effects benefit from this comprehensive approach.</p>
+<h2>Research Applications</h2>
+<ul><li>Integrated metabolic pathway research</li><li>Cellular bioenergetics</li><li>Multi-cofactor synergy</li><li>Performance metabolism models</li><li>Energy production mechanisms</li><li>Comprehensive metabolic support systems</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from moisture. Upon reconstitution, maintain at 2-8°C and use within 30 days. All components demonstrate co-stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
