--- a/products/ll-37.html
+++ b/products/ll-37.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy LL-37 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="LL-37 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>LL-37 5mg | ≥98% Pure | Human Cathelicidin Peptide | PRC Peptides</title>
+<meta name="description" content="LL-37 5mg antimicrobial peptide for innate immunity research. ≥98% purity, third-party tested, human cathelicidin. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "LL-37",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The sole human cathelicidin—a 37-amino acid amphipathic peptide representing the first line of innate immune defense against pathogens.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$29</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The sole human cathelicidin—a 37-amino acid amphipathic peptide representing the first line of innate immune defense against pathogens.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20LL-37" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is LL-37?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>LL-37 occupies a unique position in human immunology: it is the only antimicrobial peptide produced by the human cathelicidin family, unlike other species that express multiple cathelicidin variants. Cleaved from the C-terminus of the hCAP18 precursor protein, this amphipathic alpha-helical peptide demonstrates broad-spectrum antimicrobial activity against bacteria, fungi, and enveloped viruses through membrane disruption. Beyond direct antimicrobial action, LL-37 exhibits immunomodulatory functions—recruiting immune cells, modulating inflammatory responses, and promoting wound closure.</p><p>Expression of LL-37 is induced by vitamin D, linking nutritional status to innate immune capacity—a relationship that has made this peptide central to research on vitamin D-dependent immunity. Its multi-functional profile (antimicrobial, chemotactic, angiogenic, and wound-healing) makes LL-37 essential for studying the complex roles of antimicrobial peptides beyond simple pathogen killing.</p>
+<h2>Research Applications</h2>
+<ul><li>Antimicrobial mechanism studies</li><li>Innate immunity research</li><li>Membrane disruption models</li><li>Biofilm penetration research</li><li>Immune cell chemotaxis</li><li>Wound healing immunity</li><li>Vitamin D-dependent peptide regulation</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution, maintain at 2-8°C and use within 30 days. The amphipathic structure requires gentle handling to prevent aggregation at higher concentrations.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
