--- a/products/nad-1000mg.html
+++ b/products/nad-1000mg.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy NAD+ 1000mg | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="NAD+ 1000mg research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>NAD+ 1000mg | ≥98% Pure | High-Dose NAD+ Cofactor | PRC Peptides</title>
+<meta name="description" content="NAD+ 1000mg cellular cofactor for metabolic research. ≥98% purity, third-party tested, essential redox cofactor for 500+ enzymes. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "NAD+ 1000mg",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The central redox cofactor in all living cells—a pyridine nucleotide essential for over 500 enzymatic reactions governing energy metabolism, DNA repair, and cellular signaling.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$30</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The central redox cofactor in all living cells—a pyridine nucleotide essential for over 500 enzymatic reactions governing energy metabolism, DNA repair, and cellular signaling.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>1000mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20NAD%2B%201000mg" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is NAD+ 1000mg?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Nicotinamide adenine dinucleotide occupies a position of unparalleled importance in cellular biochemistry. This dinucleotide serves simultaneously as an electron carrier in redox reactions (the NAD+/NADH couple drives glycolysis, the TCA cycle, and oxidative phosphorylation), a substrate for sirtuins (deacetylases that regulate metabolism and longevity pathways), a substrate for PARPs (DNA repair enzymes), and a precursor for calcium signaling molecules. Without adequate NAD+, cellular energy production, gene expression regulation, and DNA maintenance all collapse.</p><p>NAD+ levels decline with age across tissues, correlating with metabolic dysfunction and cellular senescence—a relationship that has positioned NAD+ at the center of aging research. Studies investigating sirtuins, researching cellular energy metabolism, exploring DNA repair mechanisms, or modeling age-related NAD+ decline require direct NAD+ administration or measurement.</p>
+<h2>Research Applications</h2>
+<ul><li>Redox biochemistry</li><li>Sirtuin activation research</li><li>Cellular energy metabolism</li><li>PARP enzyme function</li><li>Mitochondrial studies</li><li>NAD+/NADH ratio measurement</li><li>Cellular aging mechanisms</li><li>DNA repair pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from light (NAD+ is photosensitive). Upon reconstitution with sterile water, use immediately or store at 2-8°C for up to 30 days. Avoid repeated freeze-thaw cycles which degrade the dinucleotide.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
