--- a/products/pe-22-28.html
+++ b/products/pe-22-28.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy PE 22-28 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="PE 22-28 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>PE 22-28 10mg | ≥98% Pure | TREK-1 Channel Modulator | PRC Peptides</title>
+<meta name="description" content="PE 22-28 10mg neuroprotective heptapeptide for neuroplasticity research. ≥98% purity, third-party tested, TREK-1 modulator. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "PE 22-28",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A synthetic fragment of the sortilin propeptide—a heptapeptide that modulates TREK-1 potassium channels to influence neuroplasticity and neuroprotection.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$30</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A synthetic fragment of the sortilin propeptide—a heptapeptide that modulates TREK-1 potassium channels to influence neuroplasticity and neuroprotection.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20PE%2022-28" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is PE 22-28?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>PE 22-28 represents targeted neuroplasticity research. This heptapeptide, corresponding to amino acids 22-28 of the propeptide region of sortilin (a protein involved in neurotrophin sorting), was identified through research into spadin—an endogenous peptide with neuroprotective properties. PE 22-28 interacts with TREK-1 (TWIK-related potassium channel), a background potassium channel involved in neuronal excitability, synaptic plasticity, and stress response.</p><p>By modulating TREK-1 channel activity, PE 22-28 influences neuronal membrane potential and excitability, with downstream effects on neurotrophic signaling and synaptic remodeling. Research suggests this peptide may enhance neuroplasticity—the brain's capacity to reorganize synaptic connections—making it valuable for studying neuroadaptation, neuroprotection mechanisms, and the role of potassium channels in cognitive function.</p>
+<h2>Research Applications</h2>
+<ul><li>TREK-1 channel modulation</li><li>Neuroplasticity mechanisms</li><li>Neuroprotection studies</li><li>Potassium channel biology</li><li>Synaptic plasticity research</li><li>Neurogenesis studies</li><li>Neurotrophic signaling pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. Standard peptide handling precautions apply.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
