--- a/products/semax.html
+++ b/products/semax.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Semax | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Semax research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Semax 5mg | ≥98% Pure | ACTH-Derived Nootropic Peptide | PRC Peptides</title>
+<meta name="description" content="Semax 5mg nootropic neuropeptide for BDNF research. ≥98% purity, third-party tested, ACTH-derived cognitive enhancer. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Semax",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The only synthetic ACTH analogue specifically engineered to penetrate the blood-brain barrier and elevate BDNF expression.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$31</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The only synthetic ACTH analogue specifically engineered to penetrate the blood-brain barrier and elevate BDNF expression.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Semax" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Semax?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Semax emerged from the same Moscow laboratory that produced Selank, but with an entirely different objective: augmenting cognitive capacity through neurotrophic upregulation. This heptapeptide analogue of the ACTH(4-10) fragment demonstrates a mechanism rare among small peptides—it crosses the blood-brain barrier intact and directly increases brain-derived neurotrophic factor expression in cortical and hippocampal regions. The result: enhanced neuroplasticity, improved dopaminergic and serotonergic tone, and measurable effects on memory consolidation in experimental models.</p><p>Where most nootropics rely on neurotransmitter modulation alone, Semax operates upstream—influencing the very production of proteins that govern synaptic remodeling. Its effects on cerebrovascular function have made it a staple in stroke recovery research, while cognitive neuroscientists value its ability to enhance working memory without stimulant-like side effects.</p>
+<h2>Research Applications</h2>
+<ul><li>BDNF upregulation research</li><li>Cognitive enhancement models</li><li>Neuroprotection studies</li><li>Cerebrovascular function research</li><li>Attention and memory mechanisms</li><li>Stroke recovery pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from light. Reconstitute with bacteriostatic or sterile water; maintain at 2-8°C and use within 30 days. This peptide exhibits enhanced stability compared to unmodified ACTH fragments.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
