--- a/products/sermorelin.html
+++ b/products/sermorelin.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Sermorelin | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Sermorelin research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Sermorelin 5mg | ≥98% Pure | GHRH(1-29) Fragment | PRC Peptides</title>
+<meta name="description" content="Sermorelin 5mg GHRH analogue for growth hormone research. ≥98% purity, third-party tested, bioactive GHRH fragment. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Sermorelin",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The truncated yet fully bioactive fragment of human GHRH—a 29-amino acid sequence that retains complete growth hormone releasing activity.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$38</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The truncated yet fully bioactive fragment of human GHRH—a 29-amino acid sequence that retains complete growth hormone releasing activity.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Sermorelin" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Sermorelin?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Sermorelin represents elegant peptide design: by identifying the minimal bioactive sequence within full-length GHRH(1-44), researchers created a compound with identical receptor activity but enhanced stability and reduced immunogenicity. This 29-amino acid fragment contains the entire receptor-binding domain, making it indispensable for studying GHRH receptor pharmacology without the complications of the full 44-residue hormone.</p><p>The peptide binds selectively to GHRH receptors on pituitary somatotrophs, triggering endogenous growth hormone release through natural pulsatile mechanisms. Unlike exogenous growth hormone administration, sermorelin preserves the physiological feedback loops governing GH secretion, making it the preferred tool for studying growth hormone axis regulation, pituitary function, and the upstream control of IGF-1 production.</p>
+<h2>Research Applications</h2>
+<ul><li>GHRH receptor binding studies</li><li>Pituitary somatotroph function</li><li>Growth hormone secretion dynamics</li><li>Pulsatile GH release mechanisms</li><li>IGF-1 pathway research</li><li>Growth hormone axis physiology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from light. Reconstitute with bacteriostatic water; maintain at 2-8°C and use within 30 days. The truncated structure provides improved stability versus full-length GHRH.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
