--- a/products/ss-31.html
+++ b/products/ss-31.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy SS-31 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="SS-31 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>SS-31 (Elamipretide) 10mg | ≥98% Pure | Cardiolipin-Targeting Peptide | PRC Peptides</title>
+<meta name="description" content="SS-31 10mg mitochondria-targeting peptide for organelle research. ≥98% purity, third-party tested, cardiolipin-specific. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "SS-31",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The first peptide to selectively target and protect the inner mitochondrial membrane—an aromatic-cationic tetrapeptide that binds cardiolipin to stabilize cristae structure and reduce ROS production.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$55</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The first peptide to selectively target and protect the inner mitochondrial membrane—an aromatic-cationic tetrapeptide that binds cardiolipin to stabilize cristae structure and reduce ROS production.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20SS-31" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is SS-31?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>SS-31 (Szeto-Schiller peptide 31, D-Arg-Dmt-Lys-Phe-NH2) represents a breakthrough in mitochondria-targeted therapeutics. This cell-permeable tetrapeptide contains alternating cationic and aromatic residues that enable it to penetrate cells and selectively accumulate at the inner mitochondrial membrane, where it binds with high affinity to cardiolipin—the signature phospholipid of mitochondrial membranes. This cardiolipin interaction stabilizes cristae architecture, the elaborately folded inner membrane structures that house the electron transport chain.</p><p>Unlike broad antioxidants, SS-31 concentrates precisely where mitochondrial ROS are generated—at the electron transport chain. By optimizing cristae structure and reducing electron leak, SS-31 decreases reactive oxygen species production at the source while preserving mitochondrial membrane potential and ATP synthesis. This mechanism has made SS-31 invaluable in ischemia-reperfusion research, neurodegenerative disease models, and studies of mitochondrial dysfunction.</p>
+<h2>Research Applications</h2>
+<ul><li>Mitochondrial membrane research</li><li>Cardiolipin interaction studies</li><li>Cristae structure biology</li><li>Mitochondrial ROS modulation</li><li>Ischemia-reperfusion models</li><li>Mitochondrial bioenergetics</li><li>Targeted mitochondrial protection</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from light. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The aromatic-cationic structure provides excellent peptide stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
