--- a/products/thymalin.html
+++ b/products/thymalin.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Thymalin | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Thymalin research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Thymalin 10mg | ≥98% Pure | Thymic Peptide Complex | PRC Peptides</title>
+<meta name="description" content="Thymalin 10mg thymic bioregulator for immune research. ≥98% purity, third-party tested, T-cell modulation studies. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Thymalin",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A pharmaceutical-grade thymic extract representing the bioregulator class—short peptides that modulate organ-specific cellular function through epigenetic mechanisms.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$37</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A pharmaceutical-grade thymic extract representing the bioregulator class—short peptides that modulate organ-specific cellular function through epigenetic mechanisms.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Thymalin" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Thymalin?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Thymalin belongs to a unique category of biological compounds developed in the Soviet Union: bioregulators—short peptides (typically 2-4 amino acids) extracted from specific organs that demonstrate tissue-specific regulatory effects. Isolated from thymus tissue, Thymalin contains peptides that appear to modulate T-cell differentiation and thymic function through mechanisms still being elucidated, possibly involving chromatin remodeling and gene expression regulation.</p><p>The bioregulator hypothesis suggests these short peptides bind to DNA regulatory regions, influencing cell differentiation and function in their tissue of origin. While mechanistic details continue to emerge, decades of research in Russia and Eastern Europe have characterized Thymalin's effects on immune function, T-cell populations, and adaptive immunity—making it valuable for thymic biology research and immunosenescence studies.</p>
+<h2>Research Applications</h2>
+<ul><li>T-cell differentiation studies</li><li>Thymic function research</li><li>Bioregulator peptide mechanisms</li><li>Immune system modulation</li><li>Immunosenescence models</li><li>Adaptive immunity research</li><li>Peptide-DNA interaction studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from moisture. Reconstitute with sterile or bacteriostatic water; maintain at 2-8°C and use within 30 days. As a biological extract, handle with standard peptide precautions.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
