--- a/products/ara-290.html
+++ b/products/ara-290.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy ARA-290 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="ARA-290 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>ARA-290 10mg | ≥98% Pure | Tissue-Protective EPO Derivative | PRC Peptides</title>
+<meta name="description" content="ARA-290 10mg innate repair receptor agonist. ≥98% purity, third-party tested, EPO-derived tissue protection peptide. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "ARA-290",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "An 11-amino acid fragment of erythropoietin engineered to selectively activate the innate repair receptor—providing tissue protection and anti-inflammatory signaling without erythropoietic activity.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$24</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">An 11-amino acid fragment of erythropoietin engineered to selectively activate the innate repair receptor—providing tissue protection and anti-inflammatory signaling without erythropoietic activity.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20ARA-290" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is ARA-290?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>ARA-290 represents molecular refinement of erythropoietin's tissue-protective properties. While full-length EPO stimulates red blood cell production through the classical EPO receptor, it also activates a distinct receptor complex called the innate repair receptor (IRR or tissue-protective receptor)—a heteromeric complex that triggers cell protection, reduces inflammation, and promotes tissue repair. ARA-290, an 11-amino acid EPO-derived peptide, selectively activates the IRR without engaging the erythropoietic EPO receptor.</p><p>This separation of functions enables clean investigation of EPO's tissue-protective mechanisms without the confounding hematological effects. Research has demonstrated ARA-290's effects in neuropathy models, ischemia-reperfusion injury, and inflammatory conditions—all mediated through IRR signaling pathways distinct from classical EPO effects. The peptide provides a unique tool for studying tissue protection mechanisms and innate repair receptor biology.</p>
+<h2>Research Applications</h2>
+<ul><li>Innate repair receptor signaling</li><li>Tissue protection mechanisms</li><li>EPO receptor biology</li><li>Neuroprotection studies</li><li>Anti-inflammatory pathways</li><li>Ischemia-reperfusion injury models</li><li>Diabetic neuropathy research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. This peptide demonstrates good stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
