--- a/products/bpc-157-tb-500.html
+++ b/products/bpc-157-tb-500.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy BPC-157/TB-500 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="BPC-157/TB-500 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>BPC-157/TB-500 10mg/10mg | ≥98% Pure | Dual Tissue Repair Complex | PRC Peptides</title>
+<meta name="description" content="BPC-157/TB-500 combination for tissue repair research. ≥98% purity, third-party tested, cytoprotective and angiogenic. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "BPC-157/TB-500",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The most widely researched tissue repair combination—pairing BPC-157's cytoprotective mechanisms with TB-500's actin-mediated cell migration for comprehensive healing studies.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$40</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The most widely researched tissue repair combination—pairing BPC-157's cytoprotective mechanisms with TB-500's actin-mediated cell migration for comprehensive healing studies.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg/10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20BPC-157%2FTB-500" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is BPC-157/TB-500?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Tissue repair requires coordinated processes: inflammatory resolution, angiogenesis, cell migration, extracellular matrix remodeling, and cytoprotection. This combination targets multiple phases simultaneously. BPC-157, a pentadecapeptide partial sequence of the body protection compound isolated from gastric juice, demonstrates remarkable cytoprotective properties in mucosal tissue while promoting angiogenesis through VEGF modulation. TB-500 (Thymosin Beta-4 fragment) facilitates actin polymerization and cytoskeletal reorganization, driving cell migration to injury sites and promoting extracellular matrix formation.</p><p>Their mechanisms complement: BPC-157 protects existing tissue and stimulates new vessel formation, while TB-500 mobilizes repair cells and promotes structural regeneration. With hundreds of published studies investigating each peptide individually, researchers increasingly combine them to model multi-phase tissue healing—from acute injury response through complete structural restoration.</p>
+<h2>Research Applications</h2>
+<ul><li>Wound healing models</li><li>Angiogenesis research</li><li>Cytoprotection mechanisms</li><li>Cell migration assays</li><li>Collagen synthesis studies</li><li>Anti-inflammatory pathway research</li><li>Musculoskeletal repair models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from moisture. Both peptides remain stable when co-reconstituted; maintain at 2-8°C and use within 30 days. Compatible in the same solution without interaction.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
