--- a/products/cagrilintide.html
+++ b/products/cagrilintide.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Cagrilintide 5mg | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Cagrilintide 5mg research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Cagrilintide 5mg | ≥98% Pure | Long-Acting Amylin Analogue | PRC Peptides</title>
+<meta name="description" content="Cagrilintide 5mg amylin receptor agonist for satiety research. ≥98% purity, third-party tested, extended half-life amylin analogue. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Cagrilintide 5mg",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A next-generation amylin receptor agonist with extended half-life—enabling sustained study of amylin's role in satiety, gastric emptying, and glucose regulation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$25</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A next-generation amylin receptor agonist with extended half-life—enabling sustained study of amylin's role in satiety, gastric emptying, and glucose regulation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Cagrilintide%205mg" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Cagrilintide 5mg?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Cagrilintide reimagines amylin pharmacology. While the first-generation amylin analogue pramlintide required frequent dosing and suffered from limited stability, Researchers structural modifications created a compound with dramatically extended receptor residence time and proteolytic resistance. This long-acting analogue enables researchers to study sustained amylin receptor activation—revealing roles for this often-overlooked hormone in metabolic regulation that short-acting compounds cannot illuminate.</p><p>Amylin, co-secreted with insulin from pancreatic beta cells, serves as a critical satiety signal and gastric motility regulator. Cagrilintide's enhanced pharmacokinetics make it ideal for investigating amylin receptor biology, the interplay between amylin and incretin pathways, and the therapeutic potential of sustained amylin agonism in metabolic disease models.</p>
+<h2>Research Applications</h2>
+<ul><li>Amylin receptor signaling research</li><li>Gastric emptying mechanisms</li><li>Satiety pathway studies</li><li>Pancreatic beta-cell co-secretion</li><li>Pramlintide comparison pharmacology</li><li>Calcitonin receptor family research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C in sealed vial. Upon reconstitution, maintain refrigerated at 2-8°C and use within 30 days. The acylated structure provides exceptional stability compared to native amylin.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
