--- a/products/cerebrolysin.html
+++ b/products/cerebrolysin.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Cerebrolysin | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Cerebrolysin research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Cerebrolysin 60mg | Pharmaceutical Grade | Neurotrophic Peptide Complex | PRC Peptides</title>
+<meta name="description" content="Cerebrolysin 60mg neurotrophic complex for neuroprotection research. Pharmaceutical grade, multi-factor brain-derived peptides. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Cerebrolysin",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The only commercially available multi-factor neurotrophic complex that mimics endogenous brain-derived growth factors across multiple receptor systems.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$23</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The only commercially available multi-factor neurotrophic complex that mimics endogenous brain-derived growth factors across multiple receptor systems.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>60mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Cerebrolysin" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Cerebrolysin?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Cerebrolysin stands apart in neuroprotection research: where most compounds target a single pathway, this pharmaceutical-grade preparation contains a complex mixture of low-molecular-weight neuropeptides and amino acids derived from porcine brain tissue. The result is a biological profile that simultaneously activates multiple neurotrophic signaling cascades—mimicking BDNF, NGF, CNTF, and GDNF pathways that govern neuroplasticity, cell survival, and synaptic remodeling.</p><p>Developed in Austria and extensively studied across European and Asian research institutions, Cerebrolysin has accumulated over 300 published studies in neurodegenerative disease models, stroke recovery, and traumatic brain injury research. Its mechanism—providing exogenous neurotrophic support when endogenous systems fail—makes it irreplaceable in neuroprotection studies where single-target interventions prove insufficient.</p>
+<h2>Research Applications</h2>
+<ul><li>Multi-pathway neuroprotection</li><li>Neurodegenerative disease models</li><li>Post-stroke neuroplasticity</li><li>Synaptic preservation studies</li><li>Neurotrophic factor signaling</li><li>Cognitive impairment research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store refrigerated at 2-8°C in original sealed ampules. Do not freeze. Protect from direct light. Use immediately upon opening; this product does not contain preservatives. Stable unopened for 24 months under proper conditions.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
