--- a/products/dermorphin.html
+++ b/products/dermorphin.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Dermorphin | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Dermorphin research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Dermorphin 5mg | ≥98% Pure | Selective μ-Opioid Agonist | PRC Peptides</title>
+<meta name="description" content="Dermorphin 5mg selective μ-opioid agonist for receptor research. ≥98% purity, third-party tested, D-amino acid peptide. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Dermorphin",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A naturally occurring heptapeptide with extraordinary μ-opioid receptor selectivity—notable for its D-alanine residue and exceptional potency in opioid receptor research.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$22</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A naturally occurring heptapeptide with extraordinary μ-opioid receptor selectivity—notable for its D-alanine residue and exceptional potency in opioid receptor research.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Dermorphin" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Dermorphin?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Dermorphin stands as one of pharmacology's most intriguing discoveries. Isolated from the skin secretions of South American Phyllomedusa frogs, this heptapeptide contains an unusual D-alanine in position 2—one of the rare instances of D-amino acids in biologically active peptides. This structural quirk contributes to dermorphin's exceptional properties: nanomolar μ-opioid receptor affinity, selectivity ratios exceeding 1000:1 for μ over δ and κ receptors, and resistance to peptidase degradation.</p><p>The peptide's extraordinary selectivity and potency have made it an essential tool in opioid receptor biology—enabling precise study of μ-opioid receptor pharmacology, structure-activity relationships, and receptor-ligand interactions. Researchers investigating opioid signaling mechanisms, studying receptor binding kinetics, or exploring the structural determinants of receptor selectivity consistently rely on dermorphin as a reference μ-selective agonist.</p>
+<h2>Research Applications</h2>
+<ul><li>μ-opioid receptor pharmacology</li><li>Receptor subtype selectivity studies</li><li>Opioid receptor binding kinetics</li><li>Structure-activity relationships</li><li>Receptor signaling mechanisms</li><li>D-amino acid peptide biology</li><li>Opioid tolerance mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from moisture and light. Upon reconstitution with sterile or bacteriostatic water, maintain at 2-8°C and use within 30 days. The D-amino acid provides proteolytic resistance.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
