--- a/products/dsip-night-blend.html
+++ b/products/dsip-night-blend.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy DSIP Night Blend | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="DSIP Night Blend research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>DSIP Night Blend | ≥98% Pure | Synergistic Sleep Research Complex | PRC Peptides</title>
+<meta name="description" content="DSIP Night Blend multi-peptide sleep complex. ≥98% purity per component, third-party tested, synergistic circadian blend. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "DSIP Night Blend",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A rare multi-peptide formulation combining three complementary sleep-regulating neuropeptides studied for their synergistic effects on circadian biology.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$42</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A rare multi-peptide formulation combining three complementary sleep-regulating neuropeptides studied for their synergistic effects on circadian biology.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20DSIP%20Night%20Blend" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is DSIP Night Blend?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Sleep architecture involves layered neurochemical systems—GABAergic inhibition, serotonergic tone, melatonergic timing, and neuropeptide signaling all converge to orchestrate restorative sleep. This proprietary blend recognizes that complexity, combining DSIP with complementary peptides that target distinct but overlapping pathways in sleep-wake regulation. The formulation enables researchers to investigate multi-system sleep modulation in ways single-agent studies cannot capture.</p><p>Unlike crude sedative approaches, this blend mirrors the brain's endogenous sleep-promoting cascade—facilitating rather than forcing the transition to restorative sleep states. Chronobiology researchers studying circadian misalignment, sleep disorder pathophysiology, or the molecular architecture of sleep cycles find this combination invaluable for modeling natural sleep regulation.</p>
+<h2>Research Applications</h2>
+<ul><li>Multi-peptide sleep architecture studies</li><li>Circadian entrainment mechanisms</li><li>Neurotransmitter interaction models in sleep</li><li>Restorative sleep pathway research</li><li>Sleep disorder neurochemistry</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from light and moisture. Reconstituted solution remains stable at 2-8°C for up to 30 days when stored properly. Single-use aliquoting recommended for repeated experiments.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
