--- a/products/dsip.html
+++ b/products/dsip.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy DSIP | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="DSIP research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>DSIP 5mg | ≥98% Pure | Sleep-Inducing Neuropeptide | PRC Peptides</title>
+<meta name="description" content="DSIP 5mg sleep-inducing neuropeptide for circadian research. ≥98% purity, third-party tested, delta sleep architecture modulator. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "DSIP",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The original sleep-inducing peptide—a naturally occurring nonapeptide that launched the field of endogenous sleep regulation research.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$31</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The original sleep-inducing peptide—a naturally occurring nonapeptide that launched the field of endogenous sleep regulation research.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20DSIP" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is DSIP?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Delta Sleep-Inducing Peptide represents a landmark discovery in chronobiology. Isolated from the cerebral venous blood of sleeping rabbits in 1977 by Swiss researchers Schoenenberger and Monnier, DSIP opened scientific inquiry into endogenous sleep architecture modulation. Unlike sedatives that suppress neural activity, this nonapeptide appears to facilitate natural sleep-wake transitions through circadian rhythm entrainment and stress hormone regulation.</p><p>The peptide's mechanism extends beyond simple sleep induction: it modulates stress response systems, exhibits analgesic properties in pain perception studies, and demonstrates cortisol-regulating effects that have made it valuable in neuroendocrine research. Decades of investigation have revealed DSIP's subtle, multi-system influence—acting more as a biological rhythm optimizer than a traditional sleep agent.</p>
+<h2>Research Applications</h2>
+<ul><li>Sleep architecture studies</li><li>Circadian rhythm regulation</li><li>Stress-response neuroendocrine pathways</li><li>Pain perception modulation</li><li>Cortisol dynamics research</li><li>Delta wave sleep mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C in amber vial to protect from light degradation. Upon reconstitution, store refrigerated (2-8°C) and utilize within 30 days for optimal peptide stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
