--- a/products/epithalon.html
+++ b/products/epithalon.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Epithalon | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Epithalon research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Epithalon 50mg | ≥98% Pure | Telomerase Activator Peptide | PRC Peptides</title>
+<meta name="description" content="Epithalon 50mg telomerase modulator for longevity research. ≥98% purity, third-party tested, pineal-derived tetrapeptide. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Epithalon",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A synthetic tetrapeptide that mimics the pineal gland's epithalamin—demonstrating telomerase activation and circadian regulation in aging research models.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$66</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A synthetic tetrapeptide that mimics the pineal gland's epithalamin—demonstrating telomerase activation and circadian regulation in aging research models.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>50mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Epithalon" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Epithalon?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Epithalon (Epitalon, Ala-Glu-Asp-Gly) emerged from decades of Russian gerontology research led by Professor Vladimir Khavinson. This tetrapeptide, designed to replicate bioactive sequences from the pineal peptide epithalamin, demonstrates two remarkable properties in experimental models: activation of telomerase (the enzyme that maintains telomere length) and modulation of circadian rhythms through melatonin regulation. These dual mechanisms position Epithalon at the intersection of cellular aging and chronobiology research.</p><p>Telomeres—the protective caps on chromosome ends—shorten with each cell division, eventually triggering senescence. Telomerase can extend telomeres, but most somatic cells suppress this enzyme. Epithalon's apparent ability to transiently activate telomerase in adult tissues has driven extensive research into its mechanism and potential for studying telomere biology and cellular aging interventions.</p>
+<h2>Research Applications</h2>
+<ul><li>Telomerase activity research</li><li>Telomere biology</li><li>Circadian rhythm regulation</li><li>Pineal peptide research</li><li>Cellular aging mechanisms</li><li>Melatonin regulation studies</li><li>Longevity pathway research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. This short peptide demonstrates good stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
