--- a/products/foxo4-dri.html
+++ b/products/foxo4-dri.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy FOXO4-DRI | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="FOXO4-DRI research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>FOXO4-DRI 10mg | ≥98% Pure | Senolytic Peptide Disruptor | PRC Peptides</title>
+<meta name="description" content="FOXO4-DRI 10mg senolytic peptide for cellular aging research. ≥98% purity, third-party tested, D-retro-inverso design. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "FOXO4-DRI",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The first peptide-based senolytic—a D-retro-inverso modified sequence that selectively disrupts the FOXO4-p53 interaction in senescent cells, triggering their apoptotic elimination.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$67</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The first peptide-based senolytic—a D-retro-inverso modified sequence that selectively disrupts the FOXO4-p53 interaction in senescent cells, triggering their apoptotic elimination.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20FOXO4-DRI" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is FOXO4-DRI?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>FOXO4-DRI represents molecular precision in anti-aging research. Senescent cells—aged cells that cease dividing but resist apoptosis—accumulate with age and secrete inflammatory factors (the senescence-associated secretory phenotype, SASP) that damage surrounding tissues. Dutch researchers discovered that in senescent cells, FOXO4 protein binds and sequesters p53, preventing p53-mediated apoptosis. FOXO4-DRI, a peptide mimicking the p53-binding domain of FOXO4, competitively disrupts this interaction—freeing p53 to trigger apoptosis specifically in senescent cells.</p><p>The D-retro-inverso modification—constructing the peptide from D-amino acids in reverse sequence—creates a molecule with identical binding surface topology but dramatically enhanced proteolytic stability. This senolytic approach—selectively eliminating senescent cells while sparing healthy ones—represents a targeted strategy for addressing cellular aging.</p>
+<h2>Research Applications</h2>
+<ul><li>Senescent cell biology</li><li>FOXO4-p53 interaction studies</li><li>Senolytic mechanism research</li><li>Cellular aging models</li><li>Apoptosis pathway research</li><li>SASP modulation</li><li>Targeted cellular aging interventions</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from moisture. Upon reconstitution, maintain at 2-8°C and use within 30 days. D-amino acid peptides demonstrate exceptional proteolytic stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
