--- a/products/ghk-cu.html
+++ b/products/ghk-cu.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy GHK-Cu | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="GHK-Cu research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>GHK-Cu 100mg | ≥98% Pure | Copper-Binding Tripeptide | PRC Peptides</title>
+<meta name="description" content="GHK-Cu 100mg copper peptide for collagen research. ≥98% purity, third-party tested, metalloproteinase modulator. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "GHK-Cu",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The archetypal copper-peptide complex—a naturally occurring tripeptide that chelates Cu²⁺ to modulate metalloproteinases, collagen synthesis, and tissue remodeling.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$31</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The archetypal copper-peptide complex—a naturally occurring tripeptide that chelates Cu²⁺ to modulate metalloproteinases, collagen synthesis, and tissue remodeling.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>100mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20GHK-Cu" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is GHK-Cu?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Glycyl-L-Histidyl-L-Lysine bound to copper represents one of nature's elegant metal-mediated signaling systems. First isolated from human plasma in the 1970s by Dr. Loren Pickart, GHK-Cu demonstrates the biological importance of copper-peptide coordination chemistry. The copper ion, precisely positioned by the peptide's histidine and terminal amine, activates the complex's biological functions: stimulating collagen and glycosaminoglycan synthesis, modulating metalloproteinase activity for balanced extracellular matrix remodeling, and providing localized antioxidant effects.</p><p>GHK-Cu's plasma concentration declines with age, correlating with diminished tissue repair capacity—a relationship that has driven extensive research into its role in wound healing, dermal remodeling, and tissue regeneration. The peptide's ability to simultaneously promote matrix synthesis and regulate degradation makes it irreplaceable in studies of balanced tissue remodeling.</p>
+<h2>Research Applications</h2>
+<ul><li>Collagen synthesis mechanisms</li><li>Metalloproteinase regulation</li><li>Copper-dependent enzyme research</li><li>Extracellular matrix remodeling</li><li>Wound healing biology</li><li>Antioxidant copper chemistry</li><li>Tissue regeneration models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from light (copper complexes are photosensitive). Reconstitute with sterile water; the copper complex remains stable at 2-8°C for 30 days. Avoid oxidizing agents.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
