--- a/products/glutathione-korean.html
+++ b/products/glutathione-korean.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Glutathione Korean | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Glutathione Korean research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Glutathione 1200mg Korean | Pharmaceutical Grade | Master Antioxidant | PRC Peptides</title>
+<meta name="description" content="Glutathione 1200mg Korean pharmaceutical grade for redox research. Master antioxidant tripeptide, 10 vials, third-party tested. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Glutathione Korean",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The cell's master antioxidant—a thiol-containing tripeptide that serves as the primary reducing agent, maintains redox homeostasis, and detoxifies xenobiotics across all mammalian tissues.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,9 +68,9 @@
 <div class="product-price">$85</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The cell's master antioxidant—a thiol-containing tripeptide that serves as the primary reducing agent, maintains redox homeostasis, and detoxifies xenobiotics across all mammalian tissues.</div>
 <div class="specs-table"><table>
-<tr><td>Form</td><td>Lyophilized Powder</td></tr>
+<tr><td>Form</td><td>Ampules</td></tr>
 <tr><td>Quantity</td><td>1200mg x10</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
 <tr><td>CAS Number</td><td>70-18-8</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Glutathione%20Korean" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Glutathione Korean?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Glutathione (γ-L-glutamyl-L-cysteinyl-glycine) represents the first line of antioxidant defense. This tripeptide, present in millimolar concentrations in cells, functions as the primary reducing agent that neutralizes reactive oxygen species before they damage proteins, lipids, or DNA. The peptide's cysteine thiol group (-SH) provides the reducing power—glutathione oscillates between reduced (GSH) and oxidized (GSSG) forms, with the GSH/GSSG ratio serving as a key indicator of cellular redox status.</p><p>Beyond direct antioxidant action, glutathione serves as a cofactor for glutathione peroxidases (which reduce hydrogen peroxide) and glutathione S-transferases (which detoxify electrophilic compounds and xenobiotics). Manufactured in Korea to pharmaceutical standards, this preparation provides research-grade glutathione for oxidative stress studies, redox biology research, and investigation of the glutathione system's central role in cellular protection.</p>
+<h2>Research Applications</h2>
+<ul><li>Redox biology</li><li>Oxidative stress models</li><li>Glutathione peroxidase studies</li><li>Cellular detoxification pathways</li><li>Thiol biochemistry</li><li>Xenobiotic metabolism</li><li>GSH/GSSG ratio studies</li><li>Antioxidant defense mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store refrigerated at 2-8°C in sealed pharmaceutical vials. After opening, use immediately or maintain at 2-8°C for up to 7 days. This pharmaceutical preparation is formulated for immediate research use.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
