--- a/products/ipamorelin.html
+++ b/products/ipamorelin.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Ipamorelin | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Ipamorelin research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Ipamorelin 5mg | ≥98% Pure | Selective Ghrelin Receptor Agonist | PRC Peptides</title>
+<meta name="description" content="Ipamorelin 5mg selective growth hormone secretagogue. ≥98% purity, third-party tested, GH-specific without prolactin elevation. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Ipamorelin",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The most selective growth hormone secretagogue available—a pentapeptide with exceptional specificity for GH release without prolactin or cortisol elevation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$21</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The most selective growth hormone secretagogue available—a pentapeptide with exceptional specificity for GH release without prolactin or cortisol elevation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Ipamorelin" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Ipamorelin?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Ipamorelin solved a critical problem in growth hormone secretagogue research: earlier ghrelin mimetics like GHRP-6 and GHRP-2 stimulated GH release but also elevated prolactin and cortisol through off-target receptor activation. Researchers Ipamorelin, a carefully designed pentapeptide, demonstrates near-exclusive selectivity for the ghrelin receptor (GHS-R1a) on somatotrophs, triggering GH secretion without the hormonal side effects that confound experimental interpretation.</p><p>This selectivity makes ipamorelin the gold standard for dissecting ghrelin receptor pharmacology and GH secretion mechanisms. Researchers studying the distinction between GHRH-mediated and ghrelin-mediated GH release, or investigating selective GH secretagogue approaches, find this peptide essential for clean, interpretable results.</p>
+<h2>Research Applications</h2>
+<ul><li>Ghrelin receptor (GHS-R1a) pharmacology</li><li>Selective GH secretion mechanisms</li><li>Growth hormone pulse dynamics</li><li>Somatotroph receptor selectivity</li><li>GHRP comparative studies</li><li>Non-GHRH secretagogue pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, refrigerate at 2-8°C and utilize within 30 days. Ipamorelin demonstrates excellent stability in solution compared to earlier secretagogues.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
