--- a/products/kpv.html
+++ b/products/kpv.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy KPV | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="KPV research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>KPV 10mg | ≥98% Pure | α-MSH Anti-Inflammatory Peptide | PRC Peptides</title>
+<meta name="description" content="KPV 10mg anti-inflammatory tripeptide for NF-κB research. ≥98% purity, third-party tested, α-MSH C-terminal fragment. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "KPV",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The isolated anti-inflammatory domain of α-MSH—a tripeptide that retains potent NF-κB inhibition without melanocortin receptor activation.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$36</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The isolated anti-inflammatory domain of α-MSH—a tripeptide that retains potent NF-κB inhibition without melanocortin receptor activation.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20KPV" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is KPV?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>KPV (Lysine-Proline-Valine) represents molecular dissection of anti-inflammatory signaling. As the C-terminal tripeptide of alpha-melanocyte stimulating hormone, KPV retains the parent molecule's remarkable anti-inflammatory properties while eliminating melanocortin receptor-mediated effects like pigmentation. This separation of functions makes KPV uniquely valuable: it modulates inflammatory gene transcription through NF-κB pathway inhibition and reduces pro-inflammatory cytokine production without the broader melanocortin system effects.</p><p>Research has demonstrated KPV's effectiveness in inflammatory bowel disease models, dermal inflammation studies, and wound healing research where inflammation must be controlled without suppressing the entire immune response. Its ability to penetrate epithelial barriers and concentrate in inflamed tissues makes it particularly relevant for mucosal inflammation research.</p>
+<h2>Research Applications</h2>
+<ul><li>NF-κB signaling inhibition</li><li>Inflammatory cytokine modulation</li><li>Inflammatory bowel disease models</li><li>Mucosal immunity research</li><li>Wound healing inflammation control</li><li>Melanocortin peptide fragment studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. This small peptide demonstrates excellent stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
