--- a/products/l-carnitine.html
+++ b/products/l-carnitine.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy L-Carnitine | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="L-Carnitine research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>L-Carnitine 600mg | ≥98% Pure | Mitochondrial Transport Cofactor | PRC Peptides</title>
+<meta name="description" content="L-Carnitine 600mg for fatty acid transport research. ≥98% purity, third-party tested, mitochondrial shuttle system cofactor. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "L-Carnitine",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The essential cofactor for mitochondrial fatty acid oxidation—a quaternary ammonium compound that shuttles long-chain fatty acids across the impermeable inner mitochondrial membrane.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$26</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The essential cofactor for mitochondrial fatty acid oxidation—a quaternary ammonium compound that shuttles long-chain fatty acids across the impermeable inner mitochondrial membrane.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>600mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20L-Carnitine" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is L-Carnitine?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>L-Carnitine (β-hydroxy-γ-trimethylaminobutyric acid) solves a fundamental problem in cellular energetics: long-chain fatty acids cannot cross the inner mitochondrial membrane where beta-oxidation occurs. Carnitine serves as the shuttle—the carnitine palmitoyltransferase (CPT) system conjugates fatty acids to carnitine, transports them across the membrane, then releases them inside the mitochondrial matrix. Without adequate carnitine, long-chain fatty acids cannot be oxidized for energy, regardless of other metabolic factors.</p><p>This bottleneck role makes L-carnitine fundamental to metabolic research. Studies of mitochondrial fatty acid oxidation, investigation of the carnitine shuttle mechanism, research into acyl-carnitine species as metabolic biomarkers, and exploration of carnitine's role in various metabolic states all require this essential cofactor.</p>
+<h2>Research Applications</h2>
+<ul><li>Mitochondrial fatty acid transport</li><li>Beta-oxidation mechanisms</li><li>Carnitine shuttle system research</li><li>Acyl-carnitine metabolism</li><li>Energy substrate utilization</li><li>Mitochondrial function studies</li><li>Carnitine deficiency models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water or sterile water, refrigerate at 2-8°C and use within 30 days. L-Carnitine demonstrates excellent solution stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
