--- a/products/lipo-c-ultra.html
+++ b/products/lipo-c-ultra.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Lipo-C Ultra Blend | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Lipo-C Ultra Blend research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Lipo-C Ultra Blend | ≥98% Pure | Comprehensive Metabolic Complex | PRC Peptides</title>
+<meta name="description" content="Lipo-C Ultra premium metabolic blend for comprehensive research. ≥98% purity per component, third-party tested, full metabolic support. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Lipo-C Ultra Blend",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The most comprehensive metabolic research formulation available—a premium blend combining lipotropic factors, amino acids, performance compounds, and mitochondrial cofactors for complete metabolic pathway coverage.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$42</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The most comprehensive metabolic research formulation available—a premium blend combining lipotropic factors, amino acids, performance compounds, and mitochondrial cofactors for complete metabolic pathway coverage.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10ml</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Lipo-C%20Ultra%20Blend" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Lipo-C Ultra Blend?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Lipo-C Ultra represents the apex of multi-component metabolic formulation. This premium blend incorporates every category of metabolic support compound: classic lipotropic factors for hepatic lipid processing, amino acids for protein synthesis and neurotransmitter production, mitochondrial cofactors for energy production, and performance-enhancing compounds for cellular optimization. The result: a research tool that enables investigation of fully-supported metabolic systems rather than isolated pathways.</p><p>Researchers exploring maximal metabolic capacity, investigating how multiple metabolic pathways integrate under optimal conditions, or studying comprehensive metabolic interventions find this formulation essential. The blend eliminates the limitation of single-factor studies, revealing system-level metabolic responses that emerge only when all necessary cofactors and substrates are available.</p>
+<h2>Research Applications</h2>
+<ul><li>Comprehensive metabolic system research</li><li>Multi-pathway integration studies</li><li>Maximal metabolic capacity models</li><li>System-level bioenergetics</li><li>Performance optimization research</li><li>Complex metabolic phenotyping</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C in sealed container with desiccant. Upon reconstitution, maintain at 2-8°C and use within 30 days. Despite complexity, all components maintain stability in combined solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
