--- a/products/mots-c.html
+++ b/products/mots-c.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy MOTS-c | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="MOTS-c research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>MOTS-c 10mg | ≥98% Pure | Mitochondrial Genome-Encoded Peptide | PRC Peptides</title>
+<meta name="description" content="MOTS-c 10mg mitochondrial-derived peptide for metabolic research. ≥98% purity, third-party tested, AMPK activator. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "MOTS-c",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The first identified mitochondrial open reading frame-encoded peptide—a 16-amino acid sequence that translocates to the nucleus to regulate metabolism.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$28</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The first identified mitochondrial open reading frame-encoded peptide—a 16-amino acid sequence that translocates to the nucleus to regulate metabolism.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20MOTS-c" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is MOTS-c?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>MOTS-c represents a paradigm shift in cellular biology. Discovered in 2015 by researchers at USC, this peptide revealed that the mitochondrial genome—long thought to encode only 13 proteins—contains open reading frames for signaling peptides that regulate nuclear gene expression. MOTS-c, encoded within the mitochondrial 12S rRNA gene, acts as a mitochondrial-to-nuclear messenger: during metabolic stress, it translocates to the nucleus and binds DNA regulatory regions, modulating expression of genes involved in glucose metabolism and insulin sensitivity.</p><p>This mitochondrial-nuclear communication pathway challenges traditional views of metabolic regulation. MOTS-c activates AMPK, enhances glucose uptake, and improves metabolic flexibility—effects that position it at the intersection of aging research, metabolic disease modeling, and the study of retrograde signaling from mitochondria to nucleus.</p>
+<h2>Research Applications</h2>
+<ul><li>Mitochondrial-nuclear signaling</li><li>Metabolic homeostasis mechanisms</li><li>AMPK pathway research</li><li>Insulin sensitivity studies</li><li>Mitochondrial genome function</li><li>Retrograde signaling research</li><li>Exercise mimetic studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from moisture. Reconstitute with bacteriostatic water; stable at 2-8°C for 30 days. Handle as a standard peptide despite its mitochondrial origin.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
