--- a/products/pt-141.html
+++ b/products/pt-141.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy PT-141 | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="PT-141 research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>PT-141 (Bremelanotide) | ≥98% Pure | MC3R/MC4R Agonist | PRC Peptides</title>
+<meta name="description" content="PT-141 melanocortin receptor agonist for CNS research. ≥98% purity, third-party tested, selective MC3R/MC4R activation. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "PT-141",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "A cyclic heptapeptide melanocortin agonist with preferential activity at MC3R and MC4R—a Melanotan II metabolite engineered for selective melanocortin receptor research.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$36</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">A cyclic heptapeptide melanocortin agonist with preferential activity at MC3R and MC4R—a Melanotan II metabolite engineered for selective melanocortin receptor research.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20PT-141" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is PT-141?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>PT-141 emerged from structure-activity relationship studies of Melanotan II, a synthetic α-MSH analogue. While Melanotan II activates multiple melanocortin receptor subtypes (MC1R through MC5R), its metabolite PT-141 demonstrates preferential activity at MC3R and MC4R with reduced MC1R activation—eliminating much of the pigmentation effect while retaining central melanocortin activity. This selectivity makes PT-141 invaluable for dissecting the distinct roles of melanocortin receptor subtypes.</p><p>MC3R and MC4R, expressed primarily in the hypothalamus, regulate energy balance, autonomic function, and motivated behaviors through melanocortin signaling. PT-141 enables researchers to study these central melanocortin pathways without the confounding peripheral effects of broader melanocortin activation, making it the preferred tool for investigating hypothalamic melanocortin biology.</p>
+<h2>Research Applications</h2>
+<ul><li>Melanocortin receptor subtype pharmacology</li><li>MC3R/MC4R signaling research</li><li>Central melanocortin pathway studies</li><li>Receptor selectivity research</li><li>Hypothalamic signaling mechanisms</li><li>Melanocortin system biology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The cyclic structure provides enhanced proteolytic stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
