--- a/products/retatrutide-20mg.html
+++ b/products/retatrutide-20mg.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Retatrutide 20mg | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Retatrutide 20mg research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Retatrutide 20mg | ≥98% Pure | Triple Incretin-Glucagon Agonist | PRC Peptides</title>
+<meta name="description" content="Retatrutide 20mg triple GLP-1/GIP/Glucagon agonist. ≥98% purity, third-party tested, next-generation metabolic research compound. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Retatrutide 20mg",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The world's first triple-agonist peptide—simultaneously activating GLP-1, GIP, and glucagon receptors to unlock metabolic effects impossible with dual agonism.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$55</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The world's first triple-agonist peptide—simultaneously activating GLP-1, GIP, and glucagon receptors to unlock metabolic effects impossible with dual agonism.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>20mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Retatrutide%2020mg" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Retatrutide 20mg?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Retatrutide represents the frontier of incretin research. Building on tirzepatide's dual-agonist success, the developers scientists engineered this peptide with an unprecedented pharmacological profile: balanced activation of three distinct hormone receptors—GLP-1, GIP, and glucagon. This triple agonism creates a metabolic phenotype unattainable through any combination of existing compounds: incretin-mediated glucose regulation and appetite suppression, plus glucagon-driven energy expenditure.</p><p>The addition of glucagon receptor activity—traditionally avoided in metabolic therapies due to hyperglycemic concerns—proves synergistic when balanced with GLP-1 and GIP signaling. Researchers investigating energy balance, thermogenesis, complex metabolic pathway interactions, or next-generation incretin pharmacology find retatrutide essential for exploring multi-receptor agonism strategies.</p>
+<h2>Research Applications</h2>
+<ul><li>Triple-receptor agonism studies</li><li>GLP-1/GIP/glucagon pathway synergy</li><li>Energy expenditure mechanisms</li><li>Complex metabolic signaling</li><li>Thermogenesis research</li><li>Next-generation incretin biology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C protected from moisture. Reconstitute with bacteriostatic water; stable at 2-8°C for 30 days. Handle with care—this represents one of the most complex peptide agonists in metabolic research.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
