--- a/products/selank-5mg.html
+++ b/products/selank-5mg.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Selank 5mg | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Selank 5mg research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Selank 5mg | ≥98% Pure | Russian-Developed Anxiolytic Peptide | PRC Peptides</title>
+<meta name="description" content="Selank 5mg anxiolytic neuropeptide for neuroscience research. ≥98% purity, third-party tested, cytokine-modulating peptide. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Selank 5mg",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "One of the few synthetic anxiolytic peptides with documented cytokine-modulating activity available for neurochemical research.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$36</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">One of the few synthetic anxiolytic peptides with documented cytokine-modulating activity available for neurochemical research.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Selank%205mg" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Selank 5mg?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Developed at Moscow's Institute of Molecular Genetics, Selank represents a rational design approach to neuropeptide therapeutics—a synthetic heptapeptide built upon the immune peptide tuftsin's structural scaffold. This derivative demonstrates the rare capacity to simultaneously modulate IL-6 expression and influence monoaminergic neurotransmitter systems, bridging neuroimmune signaling in ways few compounds can. Its dual action on GABA and serotonin pathways has positioned it as a cornerstone tool in anxiety neurobiology research.</p><p>Researchers investigating the intersection of immune signaling and behavioral neuroscience find Selank indispensable. Over two decades of Russian neurochemical research have characterized its mechanism across multiple systems, making it one of the most comprehensively studied synthetic anxiolytics in contemporary neuropharmacology.</p>
+<h2>Research Applications</h2>
+<ul><li>Anxiety model studies</li><li>Cognitive function research</li><li>Immune-neuro axis modulation</li><li>GABAergic pathway studies</li><li>Stress response mechanisms</li><li>Cytokine regulation research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C in sealed vial. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and utilize within 30 days. Avoid freeze-thaw cycles to preserve peptide integrity.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
