--- a/products/thioctic-acid.html
+++ b/products/thioctic-acid.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Thioctic Acid | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Thioctic Acid research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Alpha-Lipoic Acid 25mg/5ml | ≥98% Pure | Universal Antioxidant | PRC Peptides</title>
+<meta name="description" content="Alpha-lipoic acid 25mg/5ml universal antioxidant for mitochondrial research. ≥98% purity, third-party tested, lipid and water soluble. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Thioctic Acid",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The only antioxidant that functions in both aqueous and lipid environments—a dithiol cofactor essential for mitochondrial energy metabolism and capable of regenerating other antioxidants.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,9 +68,9 @@
 <div class="product-price">$75</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The only antioxidant that functions in both aqueous and lipid environments—a dithiol cofactor essential for mitochondrial energy metabolism and capable of regenerating other antioxidants.</div>
 <div class="specs-table"><table>
-<tr><td>Form</td><td>Lyophilized Powder</td></tr>
+<tr><td>Form</td><td>Solution</td></tr>
 <tr><td>Quantity</td><td>25mg/5ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
 <tr><td>CAS Number</td><td>1077-28-7</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Thioctic%20Acid" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Thioctic Acid?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Alpha-lipoic acid (1,2-dithiolane-3-pentanoic acid) occupies a unique position in antioxidant biology: its amphipathic structure allows it to scavenge reactive species in both water-soluble compartments (cytoplasm) and lipid-rich environments (membranes)—a property no other antioxidant possesses. Beyond direct free radical neutralization, lipoic acid serves as an essential cofactor for mitochondrial α-ketoacid dehydrogenase complexes (pyruvate dehydrogenase, α-ketoglutarate dehydrogenase), linking its antioxidant function directly to energy metabolism.</p><p>The reduced form (dihydrolipoic acid) demonstrates remarkable antioxidant activity, directly scavenging reactive oxygen and nitrogen species while regenerating other antioxidants—reducing oxidized vitamin C, vitamin E, and glutathione back to their active forms. This antioxidant network amplification makes lipoic acid a force multiplier in cellular antioxidant defense.</p>
+<h2>Research Applications</h2>
+<ul><li>Mitochondrial cofactor function</li><li>Universal antioxidant mechanisms</li><li>Antioxidant regeneration studies</li><li>Glucose metabolism research</li><li>Neuroprotection models</li><li>Metal chelation research</li><li>Redox signaling pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store refrigerated at 2-8°C protected from light (light-sensitive). Supplied in solution for immediate use. Maintain sealed until use; utilize within 30 days after opening. Protect from oxidizing conditions.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
