--- a/products/tirzepatide-30mg.html
+++ b/products/tirzepatide-30mg.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Tirzepatide 30mg | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Tirzepatide 30mg research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Tirzepatide 30mg | ≥98% Pure | Higher-Dose Dual Agonist | PRC Peptides</title>
+<meta name="description" content="Tirzepatide 30mg dual GLP-1/GIP agonist for incretin research. ≥98% purity, third-party tested, balanced receptor activation. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Tirzepatide 30mg",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The first dual incretin receptor agonist—a fusion peptide that simultaneously activates GLP-1 and GIP pathways for unprecedented metabolic effects.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,7 +68,7 @@
 <div class="product-price">$46</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The first dual incretin receptor agonist—a fusion peptide that simultaneously activates GLP-1 and GIP pathways for unprecedented metabolic effects.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>30mg</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Tirzepatide%2030mg" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Tirzepatide 30mg?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>Tirzepatide represents a paradigm shift in incretin biology. Where previous research focused on single-receptor agonism, the developers scientists engineered this novel peptide to activate both glucose-dependent insulinotropic polypeptide (GIP) and glucagon-like peptide-1 (GLP-1) receptors with balanced potency. The compound's structure—based on the native GIP sequence with modifications that confer GLP-1 activity—creates a dual agonist profile impossible to achieve with natural hormones.</p><p>This dual incretin activation reveals synergistic metabolic effects: GIP enhances insulin secretion and may support beta-cell health, while GLP-1 provides appetite suppression and delays gastric emptying. Researchers studying incretin receptor cross-talk, synergistic metabolic signaling, or the distinct contributions of GIP versus GLP-1 pathways find tirzepatide indispensable for dissecting complex incretin physiology.</p>
+<h2>Research Applications</h2>
+<ul><li>Dual incretin pathway research</li><li>GIP/GLP-1 receptor synergy</li><li>Incretin receptor pharmacology</li><li>Metabolic signaling cascade studies</li><li>Pancreatic islet function</li><li>Comparative incretin biology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store lyophilized at -20°C in sealed container. Reconstitute with bacteriostatic water; maintain at 2-8°C for up to 30 days. The fatty acid modification provides proteolytic resistance and extended stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
