--- a/products/vitamin-c-iv.html
+++ b/products/vitamin-c-iv.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Buy Vitamin C IV | ≥98% Pure | Third-Party Tested | PRC Peptides</title>
-<meta name="description" content="Vitamin C IV research compound. ≥98% purity, third-party tested peptide for laboratory research. COA available.">
+<title>Vitamin C 10mg/20ml | Pharmaceutical Grade | Ascorbic Acid Injectable | PRC Peptides</title>
+<meta name="description" content="Vitamin C 10mg/20ml pharmaceutical injectable for antioxidant research. Water-soluble reducing agent, collagen synthesis cofactor. COA available.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Vitamin C IV",
-  "description": "Research-grade peptide for in vitro laboratory investigation.",
+  "description": "The essential water-soluble antioxidant and enzymatic cofactor—a powerful reducing agent required for collagen synthesis, neurotransmitter production, and immune cell function.",
   "brand": {
     "@type": "Brand",
     "name": "PRC Peptides"
@@ -68,9 +68,9 @@
 <div class="product-price">$75</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">Research-grade peptide for in vitro laboratory investigation.</div>
+<div class="short-desc">The essential water-soluble antioxidant and enzymatic cofactor—a powerful reducing agent required for collagen synthesis, neurotransmitter production, and immune cell function.</div>
 <div class="specs-table"><table>
-<tr><td>Form</td><td>Lyophilized Powder</td></tr>
+<tr><td>Form</td><td>Solution</td></tr>
 <tr><td>Quantity</td><td>10mg/20ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
 <tr><td>CAS Number</td><td>50-81-7</td></tr>
@@ -95,17 +95,18 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Vitamin%20C%20IV" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Vitamin C IV?</h2>
-<p>This research compound is intended exclusively for in vitro laboratory research and scientific investigation. Not for human consumption.</p><p>For detailed research protocols and reconstitution guidelines, consult peptideresourcecenter.com.</p>
-
+<p>L-Ascorbic acid (vitamin C) serves multiple critical biochemical roles beyond its well-known antioxidant function. As a cofactor for prolyl and lysyl hydroxylases, ascorbate is absolutely required for collagen triple helix stability—without adequate vitamin C, collagen synthesis fails, manifesting as scurvy. The vitamin also serves as cofactor for dopamine β-hydroxylase (converting dopamine to norepinephrine) and other copper-containing monooxygenases essential for neurotransmitter synthesis.</p><p>As an antioxidant, ascorbate directly reduces reactive oxygen species and serves as the first line of defense in aqueous environments. It functions synergistically with vitamin E by reducing tocopheroxyl radicals back to active tocopherol, linking water-soluble and lipid-soluble antioxidant systems. This pharmaceutical-grade injectable preparation enables precise dosing in controlled research applications.</p>
+<h2>Research Applications</h2>
+<ul><li>Collagen hydroxylation research</li><li>Ascorbate-dependent enzyme studies</li><li>Antioxidant mechanism research</li><li>Iron metabolism</li><li>Neurotransmitter synthesis pathways</li><li>Immune cell function studies</li><li>Vitamin C-dependent biochemistry</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
 <h2>Storage & Handling</h2>
-<p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. Avoid repeated freeze-thaw cycles.</p>
+<p>Store refrigerated at 2-8°C protected from light (photosensitive). Use within 14 days after opening. Ascorbic acid oxidizes in solution over time; fresh preparations provide optimal activity. Do not freeze.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
